added the Linkedln and github icons to their buttons

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 26 2023 00:06:57 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 26 2023 00:51:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65855a2d65005248b9adda82" data-wf-site="65855a2d65005248b9adda27" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@ fbq('track', 'PageView');
     <div class="section-hero">
       <div id="LANDING" class="background-layer"></div><img src="placeholder.svg" loading="lazy" alt="">
       <div class="hero-nav">
-        <a href="#LANDING" class="relume-link w-inline-block"><img src="images/Tamer-B-Portfolio.png" loading="lazy" width="463" sizes="(max-width: 479px) 35vw, (max-width: 767px) 44vw, (max-width: 991px) 221px, 198.3984375px" alt="" srcset="images/Tamer-B-Portfolio-p-500.png 500w, images/Tamer-B-Portfolio-p-800.png 800w, images/Tamer-B-Portfolio.png 1008w" class="image"></a>
+        <a href="#LANDING" class="relume-link w-inline-block"><img src="images/Tamer-B-Portfolio.png" loading="lazy" width="463" sizes="(max-width: 479px) 34vw, (max-width: 767px) 45vw, (max-width: 991px) 221px, 198.3984375px" alt="" srcset="images/Tamer-B-Portfolio-p-500.png 500w, images/Tamer-B-Portfolio-p-800.png 800w, images/Tamer-B-Portfolio.png 1008w" class="image"></a>
         <div class="hero-nav_button-wrapper">
           <a href="#Resume" class="button-icon-small-secondary margin-right-small mobile-margin-right-zero w-inline-block">
             <div class="text-block-2">Download My Resume</div><img src="images/cv-file-interface-symbol-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
@@ -249,8 +249,14 @@ fbq('track', 'PageView');
             <div class="margin-bottom-large">
               <p class="paragraph-large">Take a look at my LinkedIn and GitHub profiles below 👇</p>
             </div>
-            <a href="https://www.linkedin.com/in/tamer-ben-benhassan/" target="_blank" class="button-inverted w-button">Linkedln</a>
-            <a href="https://github.com/tamerbenhassan" target="_blank" class="button-inverted w-button">Github</a>
+            <div class="button-wrapper">
+              <a href="https://www.linkedin.com/in/tamer-ben-benhassan/" target="_blank" class="button-icon-small margin-right-small linkedln-down-today w-inline-block"><img src="images/linkedin-svgrepo-com-1.svg" loading="lazy" alt="" class="button-icon">
+                <div class="text-block-4">Linkedin</div>
+              </a>
+              <a href="https://github.com/tamerbenhassan" target="_blank" class="button-icon-small-secondary w-inline-block"><img src="images/github-142-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
+                <div class="text-block-3">Github</div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -274,10 +280,10 @@ fbq('track', 'PageView');
             </div>
             <div class="button-wrapper">
               <a href="https://resume-tamer-benhassan.s3.amazonaws.com/Resume_Tamer_Ben.pdf" target="_blank" class="button-icon-small margin-right-small w-inline-block"><img src="images/pdf-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
-                <div class="text-block-4">RESUME (PDF)</div>
+                <div class="text-block-4">CV (PDF)</div>
               </a>
               <a href="https://www.notion.so/team/23b2be10-6df3-475c-a188-b6d726834cc1/join" target="_blank" class="button-icon-small-secondary w-inline-block"><img src="images/notion-logo-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
-                <div class="text-block-3">RESUME (NOTION)</div>
+                <div class="text-block-3">CV (NOTION)</div>
               </a>
             </div>
             <div class="button-wrapper">
