fixed the resume button at top

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 26 2023 01:07:59 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 26 2023 01:29:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65855a2d65005248b9adda82" data-wf-site="65855a2d65005248b9adda27" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,10 +40,10 @@ fbq('track', 'PageView');
     <div class="section-hero">
       <div id="LANDING" class="background-layer"></div><img src="placeholder.svg" loading="lazy" alt="">
       <div class="hero-nav">
-        <a href="#LANDING" class="relume-link w-inline-block"><img src="images/Tamer-B-Portfolio.png" loading="lazy" width="463" sizes="(max-width: 479px) 34vw, (max-width: 767px) 45vw, (max-width: 991px) 221px, 198.3984375px" alt="" srcset="images/Tamer-B-Portfolio-p-500.png 500w, images/Tamer-B-Portfolio-p-800.png 800w, images/Tamer-B-Portfolio.png 1008w" class="image"></a>
+        <a href="#LANDING" class="relume-link w-inline-block"><img src="images/Tamer-B-Portfolio.png" loading="lazy" width="188" sizes="(max-width: 479px) 43vw, 195px" alt="" srcset="images/Tamer-B-Portfolio-p-500.png 500w, images/Tamer-B-Portfolio-p-800.png 800w, images/Tamer-B-Portfolio.png 1008w" class="image"></a>
         <div class="hero-nav_button-wrapper">
           <a href="#Resume" class="button-icon-small-secondary margin-right-small mobile-margin-right-zero w-inline-block">
-            <div class="text-block-2">Download My Resume</div><img src="images/cv-file-interface-symbol-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
+            <div class="text-block-2"> resume</div><img src="images/cv-file-interface-symbol-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
           </a>
           <a href="https://www.linkedin.com/in/tamer-ben-benhassan/" target="_blank" class="button-icon-small hide-mobile w-inline-block">
             <div class="text-block">Linkedln</div><img src="images/linkedin-svgrepo-com-1.svg" loading="lazy" alt="" class="button-icon">
