Added the interactive  logo slide

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 26 2023 01:29:22 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 27 2023 21:30:35 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65855a2d65005248b9adda82" data-wf-site="65855a2d65005248b9adda27" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@ fbq('track', 'PageView');
     <div class="section-hero">
       <div id="LANDING" class="background-layer"></div><img src="placeholder.svg" loading="lazy" alt="">
       <div class="hero-nav">
-        <a href="#LANDING" class="relume-link w-inline-block"><img src="images/Tamer-B-Portfolio.png" loading="lazy" width="188" sizes="(max-width: 479px) 43vw, 195px" alt="" srcset="images/Tamer-B-Portfolio-p-500.png 500w, images/Tamer-B-Portfolio-p-800.png 800w, images/Tamer-B-Portfolio.png 1008w" class="image"></a>
+        <a href="#LANDING" class="relume-link w-inline-block"><img src="images/Tamer-B-Portfolio.png" loading="lazy" width="188" sizes="(max-width: 479px) 43vw, 188px" alt="" srcset="images/Tamer-B-Portfolio-p-500.png 500w, images/Tamer-B-Portfolio-p-800.png 800w, images/Tamer-B-Portfolio.png 1008w" class="image"></a>
         <div class="hero-nav_button-wrapper">
           <a href="#Resume" class="button-icon-small-secondary margin-right-small mobile-margin-right-zero w-inline-block">
             <div class="text-block-2"> resume</div><img src="images/cv-file-interface-symbol-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
@@ -261,8 +261,14 @@ fbq('track', 'PageView');
         </div>
       </div>
     </div>
+    <div class="w-layout-blockcontainer container-3 w-container">
+      <div class="carousel-container">
+        <div class="logo-container"><img src="images/aws-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/docker-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/kubernetes-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/terraform-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/ansible-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/python-127-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/jenkins-svgrepo-com-1.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/github-142-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"></div>
+        <div class="logo-container"><img src="images/aws-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/docker-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/kubernetes-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/terraform-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/ansible-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/python-127-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/jenkins-svgrepo-com-1.svg" loading="lazy" alt="" class="image-4 logo"><img src="images/github-142-svgrepo-com.svg" loading="lazy" alt="" class="image-4 logo"></div>
+      </div>
+    </div>
     <section class="section">
-      <div data-w-id="7f7aaf41-77be-39b9-516d-13b091d6f95f" class="w-layout-blockcontainer container-2 w-container"></div>
+      <div class="w-layout-blockcontainer container-2 w-container"></div>
     </section>
     <div id="Resume" class="section-footer cv">
       <div class="background-layer"></div>
@@ -270,7 +276,7 @@ fbq('track', 'PageView');
         <div class="padding-vertical-footer">
           <div class="footer_text-wrapper">
             <div class="margin-bottom-small">
-              <h2>Next Milestone</h2>
+              <h2 class="heading-4">Next Milestone</h2>
             </div>
             <div class="margin-bottom-medium">
               <h4 class="heading">Achieving the Certified Kubernetes Administrator (CKA) certification, enhancing my knowledge and practical expertise in Kubernetes.</h4>
