Added Thesis link reference

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 27 2023 22:32:38 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 28 2023 11:01:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65855a2d65005248b9adda82" data-wf-site="65855a2d65005248b9adda27" lang="en">
 <head>
   <meta charset="utf-8">
@@ -122,6 +122,9 @@ fbq('track', 'PageView');
               <div class="margin-bottom-medium">
                 <div class="timeline_text">Following my Bachelor&#x27;s degree, I pursued a Master&#x27;s in Nanoscience, including an apprenticeship where I learned basic programming, particularly in Python and its libraries.<br></div>
               </div>
+              <a href="https://www.dew.recerca.urv.cat/en/research/publicacions/" target="_blank" class="timeline_link w-inline-block">
+                <div>Publications &amp; Theses references</div><img src="images/open_in_new.svg" loading="lazy" alt="" class="link-icon">
+              </a>
               <div class="timeline_image-wrapper margin-bottom-medium"><img src="images/3.png" loading="lazy" width="480" sizes="(max-width: 479px) 48px, (max-width: 767px) 64px, (max-width: 991px) 36vw, (max-width: 1439px) 37vw, 470px" alt="" srcset="images/3-p-500.png 500w, images/3-p-800.png 800w, images/3.png 1080w"></div>
             </div>
           </div>
@@ -282,7 +285,7 @@ fbq('track', 'PageView');
               <a href="https://resume-tamer-benhassan.s3.amazonaws.com/Resume_Tamer_Ben.pdf" target="_blank" class="button-icon-small margin-right-small w-inline-block"><img src="images/pdf-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
                 <div class="text-block-4">CV (PDF)</div>
               </a>
-              <a href="https://www.notion.so/team/23b2be10-6df3-475c-a188-b6d726834cc1/join" target="_blank" class="button-icon-small-secondary w-inline-block"><img src="images/notion-logo-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
+              <a href="https://ionized-sofa-401.notion.site/Tamer-s-Resume-439470ebe11c438fb541cb299eb33021?pvs=4" target="_blank" class="button-icon-small-secondary w-inline-block"><img src="images/notion-logo-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
                 <div class="text-block-3">CV (NOTION)</div>
               </a>
             </div>
