--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ fbq('track', 'PageView');
           <div class="timeline-hero_heading-wrapper">
             <h1 class="heading-2">Hi, I&#x27;m Tamer<span class="text-underline"></span></h1>
             <div class="margin-bottom-medium">
-              <h4 class="heading-3">A Passionate DevOps/Cloud Engineer</h4>
+              <h4 class="heading-3">A Passionate DevOps Engineer</h4>
             </div>
             <p class="paragraph-large">Having transitioned from a Chemical and Nanoscience background, I pivoted to the realm of Cloud Computing in 2022, discovering a passion for creating projects such as this website (For better experience, use Desktop).<br></p>
             <div class="div-block-2">
@@ -141,7 +141,7 @@ fbq('track', 'PageView');
               </div>
               <div class="margin-bottom-xlarge">
                 <div class="inline-block">
-                  <p class="text-colour-lightgrey">I started exploring other topics and reading blogs which drove me to Cloud computing.<br><br>Since then, I started slowly studying and taking online courses in parallel of my master studies and got very curious to know more.<br></p>
+                  <p class="text-colour-lightgrey">I started exploring other topics and reading blogs which drove me to Cloud computing and DevOps.<br><br>Since then, I started slowly studying and taking online courses in parallel of my master studies and got very curious to know more.<br></p>
                 </div>
               </div>
               <div class="timeline_image-wrapper margin-bottom-medium"><img src="images/4.png" loading="lazy" width="480" sizes="(max-width: 479px) 48px, (max-width: 767px) 64px, (max-width: 991px) 36vw, (max-width: 1439px) 37vw, 470px" alt="" srcset="images/4-p-500.png 500w, images/4-p-800.png 800w, images/4.png 1080w"></div>
@@ -194,7 +194,7 @@ fbq('track', 'PageView');
             </div>
             <div class="timeline_right">
               <div class="margin-bottom-medium">
-                <div class="timeline_text">Gained practical experience in cloud computing at Viseo, participating in meetings, contributing to user stories, learning Docker and app containerization, writing Dockerfiles, and container orchestration with Kubernetes.<br></div>
+                <div class="timeline_text">Gained practical experience in cloud computing at Viseo, participating in meetings, contributing to user stories, learning Docker and app containerization, writing Ansible Playbooks, and container orchestration with Kubernetes.<br></div>
               </div>
               <div class="timeline_image-wrapper"><img src="images/7.png" loading="lazy" width="480" sizes="(max-width: 479px) 48px, (max-width: 767px) 64px, (max-width: 991px) 36vw, (max-width: 1439px) 37vw, 470px" alt="" srcset="images/7-p-500.png 500w, images/7-p-800.png 800w, images/7.png 1080w"></div>
             </div>
@@ -229,7 +229,7 @@ fbq('track', 'PageView');
             </div>
             <div class="timeline_right">
               <div class="margin-bottom-xlarge">
-                <div class="timeline_text">Started exploring new professional avenues and opportunities to apply and enhance my cloud computing, AWS, Terraform, Python and Kubernetes skills in a more challenging and dynamic environment.<br></div>
+                <div class="timeline_text">Started exploring new professional avenues and opportunities to apply and enhance my cloud computing, DevOps, AWS, and Kubernetes skills in a more challenging and dynamic environment.<br></div>
               </div>
               <div class="timeline_image-wrapper margin-bottom-medium"><img src="images/9.png" loading="lazy" width="480" sizes="(max-width: 479px) 48px, (max-width: 767px) 64px, (max-width: 991px) 36vw, (max-width: 1439px) 37vw, 470px" alt="" srcset="images/9-p-500.png 500w, images/9-p-800.png 800w, images/9.png 1080w"></div>
             </div>
