Updated 'Next Milestone'

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ fbq('track', 'PageView');
               <h2 class="heading-4">Next Milestone</h2>
             </div>
             <div class="margin-bottom-medium">
-              <h4 class="heading">Achieving the Certified Kubernetes Administrator (CKA) certification, enhancing my knowledge and practical expertise in Kubernetes.</h4>
+              <h4 class="heading">Validated the Certified Kubernetes Certification and aiming to deepen more my knowledge in both Kubernetes and AWS.</h4>
             </div>
             <div class="margin-bottom-large">
               <p class="paragraph-large">View my resume in PDF format and on Notion app below</p>
