--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ fbq('track', 'PageView');
               <h2 class="heading-4">Next Milestone</h2>
             </div>
             <div class="margin-bottom-medium">
-              <h4 class="heading">Validated the Certified Kubernetes Administrator (CKA) Certification and aiming to deepen more my knowledge in Kubernetes and DevOps tools.</h4>
+              <h4 class="heading">Having achieved the Certified Kubernetes Administrator (CKA) certification, I am now focused on further deepening my knowledge of Kubernetes, as well as DevOps and DevSecOps practices.</h4>
             </div>
             <div class="margin-bottom-large">
               <p class="paragraph-large">View my resume in PDF format and on Notion app below</p>
