--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ fbq('track', 'PageView');
               <div class="timeline_date-text">Today</div>
             </div>
             <div class="margin-bottom-small">
-              <div class="timeline_text">In pursuing new opportunities, I&#x27;m building personal projects like this AWS-hosted website you are exploring now, using Terraform &amp; Webflow, while also enhancing my skills through DevOps Bootcamps.<br></div>
+              <div class="timeline_text">In pursuing new opportunities, I&#x27;m building personal projects like this AWS-hosted website you are exploring now, using Terraform &amp; Webflow, while also enhancing my skills in DevOps practices<br></div>
             </div>
             <div class="margin-bottom-large">
               <p class="paragraph-large">Take a look at my LinkedIn and GitHub profiles below 👇</p>
@@ -276,7 +276,7 @@ fbq('track', 'PageView');
               <h2 class="heading-4">Next Milestone</h2>
             </div>
             <div class="margin-bottom-medium">
-              <h4 class="heading">Having achieved the Certified Kubernetes Administrator (CKA) certification, I am now focused on further deepening my knowledge of Kubernetes, as well as DevOps and DevSecOps practices.</h4>
+              <h4 class="heading">Having achieved the Certified Kubernetes Administrator (CKA) certification, I am now focused on further deepening my knowledge of Kubernetes, and DevSecOps practices.</h4>
             </div>
             <div class="margin-bottom-large">
               <p class="paragraph-large">View my resume in PDF format and on Notion app below</p>
