--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ fbq('track', 'PageView');
                 <div class="timeline_text">Graduated and fully committed to cloud computing, securing an internship in Viseo in Barcelona, and earning my first AWS certification.<br></div>
               </div>
               <div class="margin-bottom-medium">
-                <p class="text-colour-lightgrey">I got an internship in Viseo in Barcelona thanks to my  friend (Thank you Simo 😃) where I got to learn a lot and see the practical world.<br><br>By January 2023, I went on developing my knowledge and validated my first AWS certification which gave me the confidence and boost me up to want more and learn more.<br></p>
+                <p class="text-colour-lightgrey">I got an internship in Viseo thanks to my  friend (Thank you Simo 😃) where I got to learn a lot and see the practical world.<br><br>By January 2023, I went on developing my knowledge and validated my first AWS certification which gave me the confidence and boost me up to want more and learn more.<br></p>
               </div>
               <div class="margin-bottom-xlarge">
                 <div class="inline-block">
