--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ fbq('track', 'PageView');
           <div class="footer_credits-wrapper">
             <p>© 2023, Tamer Benhassan. All Rights Reserved.</p>
             <p class="text-link text-light-grey privacy-policy">
-              <a href="https://www.relume.io/privacy-policy" target="_blank" class="text-link text-light-grey">Privacy Policy</a>
+              <a href="https://www.tamerbenhassan.com" target="_blank" class="text-link text-light-grey">Privacy Policy</a>
             </p>
           </div>
         </div>
