--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ fbq('track', 'PageView');
             </div>
             <div class="timeline_right">
               <div class="margin-bottom-medium">
-                <div class="timeline_text">Gained practical experience in cloud computing at Viseo, participating in meetings, contributing to user stories, learning Docker and app containerization, writing Ansible Playbooks, and container orchestration with Kubernetes.<br></div>
+                <div class="timeline_text">Gained practical experience in cloud computing and started my second internship as a DevOps Engineer. Participated in meetings, contributing to user stories, by writing AWS resources using Terraform, Designing Jenkins pipelinea and its different stages.<br></div>
               </div>
               <div class="timeline_image-wrapper"><img src="images/7.png" loading="lazy" width="480" sizes="(max-width: 479px) 48px, (max-width: 767px) 64px, (max-width: 991px) 36vw, (max-width: 1439px) 37vw, 470px" alt="" srcset="images/7-p-500.png 500w, images/7-p-800.png 800w, images/7.png 1080w"></div>
             </div>
@@ -208,7 +208,7 @@ fbq('track', 'PageView');
             </div>
             <div class="timeline_right">
               <div class="margin-bottom-medium">
-                <div class="timeline_text">Achieved three AWS certifications, Terraform Associate, and PCEP Python certifications, and hungry for more. I began seeking new opportunities to further expand my skills and career, saying goodbye to VISEO team in which I&#x27;m eternally grateful for my first experience in the field.<br></div>
+                <div class="timeline_text">Achieved three AWS certifications, Terraform Associate, and PCEP Python certifications, and hungry for more. I began seeking new opportunities to further expand my skills and career.<br></div>
               </div>
               <div class="margin-bottom-xlarge">
                 <div class="inline-block">
