--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@ fbq('track', 'PageView');
           </div>
           <div data-w-id="ca21cc2f-00d7-84a3-f446-587e32a59c00" class="timeline_item">
             <div id="w-node-ca21cc2f-00d7-84a3-f446-587e32a59c01-b9adda82" class="timeline_left">
-              <div class="timeline_date-text">September 2022</div>
+              <div class="timeline_date-text">January 2022</div>
             </div>
             <div id="w-node-ca21cc2f-00d7-84a3-f446-587e32a59c04-b9adda82" class="timeline_centre">
               <div class="timeline_circle"></div>
             </div>
             <div class="timeline_right">
               <div class="margin-bottom-medium">
-                <div class="timeline_text">Graduated and fully committed to cloud computing, securing an internship in Viseo in Barcelona, and earning my first AWS certification.<br></div>
+                <div class="timeline_text">Graduated and fully committed to cloud computing, securing an internship in Woopcase, and earning my first AWS certification.<br></div>
               </div>
               <div class="margin-bottom-medium">
-                <p class="text-colour-lightgrey">I got an internship in Viseo thanks to my  friend (Thank you Simo 😃) where I got to learn a lot and see the practical world.<br><br>By January 2023, I went on developing my knowledge and validated my first AWS certification which gave me the confidence and boost me up to want more and learn more.<br></p>
+                <p class="text-colour-lightgrey">I got an internship in Viseo thanks to my  friend (Thank you Simo 😃) where I got to learn a lot and see the practical world.<br><br>I went on developing my knowledge and validated my first AWS certification which gave me the confidence and boost me up to want more and learn more.<br></p>
               </div>
               <div class="margin-bottom-xlarge">
                 <div class="inline-block">
@@ -187,28 +187,28 @@ fbq('track', 'PageView');
           </div>
           <div data-w-id="3f36ed1c-86ad-66f2-a7e0-a2e345d5b491" class="timeline_item">
             <div id="w-node-_3f36ed1c-86ad-66f2-a7e0-a2e345d5b492-b9adda82" class="timeline_left">
-              <div class="timeline_date-text">July 2023</div>
+              <div class="timeline_date-text">September 2023</div>
             </div>
             <div id="w-node-_3f36ed1c-86ad-66f2-a7e0-a2e345d5b495-b9adda82" class="timeline_centre">
               <div class="timeline_circle"></div>
             </div>
             <div class="timeline_right">
               <div class="margin-bottom-medium">
-                <div class="timeline_text">Gained practical experience in cloud computing and started my second internship as a DevOps Engineer. Participated in meetings, contributing to user stories, by writing AWS resources using Terraform, Designing Jenkins pipelinea and its different stages.<br></div>
+                <div class="timeline_text">Achieved three AWS certifications, Terraform Associate, and PCEP Python certifications, and hungry for more. I began seeking new opportunities to further expand my skills and career.<br></div>
               </div>
-              <div class="timeline_image-wrapper"><img src="images/7.png" loading="lazy" width="480" sizes="(max-width: 479px) 48px, (max-width: 767px) 64px, (max-width: 991px) 36vw, (max-width: 1439px) 37vw, 470px" alt="" srcset="images/7-p-500.png 500w, images/7-p-800.png 800w, images/7.png 1080w"></div>
+              <div class="timeline_image-wrapper"><img src="images/8.png" loading="lazy" width="480" sizes="(max-width: 479px) 48px, (max-width: 767px) 64px, (max-width: 991px) 36vw, (max-width: 1439px) 37vw, 470px" alt="" srcset="images/8-p-500.png 500w, images/8-p-800.png 800w, images/8.png 1080w"></div>
             </div>
           </div>
           <div data-w-id="24c49997-4a3d-4bd7-0915-1f0630d904ae" class="timeline_item">
             <div id="w-node-_24c49997-4a3d-4bd7-0915-1f0630d904af-b9adda82" class="timeline_left">
-              <div class="timeline_date-text">September 2023</div>
+              <div class="timeline_date-text">October 2023</div>
             </div>
             <div id="w-node-_24c49997-4a3d-4bd7-0915-1f0630d904b2-b9adda82" class="timeline_centre">
               <div class="timeline_circle"></div>
             </div>
             <div class="timeline_right">
               <div class="margin-bottom-medium">
-                <div class="timeline_text">Achieved three AWS certifications, Terraform Associate, and PCEP Python certifications, and hungry for more. I began seeking new opportunities to further expand my skills and career.<br></div>
+                <div class="timeline_text">Gained practical experience in cloud computing and started my second internship as a DevOps Engineer. Participated in meetings, contributing to user stories, by applying DevSecOps practices, writing AWS resources using Terraform, Designing Jenkins pipelines and its different stages.<br></div>
               </div>
               <div class="margin-bottom-xlarge">
                 <div class="inline-block">
@@ -217,12 +217,12 @@ fbq('track', 'PageView');
                   </a>
                 </div>
               </div>
-              <div class="timeline_image-wrapper"><img src="images/8.png" loading="lazy" width="480" sizes="(max-width: 479px) 48px, (max-width: 767px) 64px, (max-width: 991px) 36vw, (max-width: 1439px) 37vw, 470px" alt="" srcset="images/8-p-500.png 500w, images/8-p-800.png 800w, images/8.png 1080w"></div>
+              <div class="timeline_image-wrapper"><img src="images/7.png" loading="lazy" width="480" sizes="(max-width: 479px) 48px, (max-width: 767px) 64px, (max-width: 991px) 36vw, (max-width: 1439px) 37vw, 470px" alt="" srcset="images/7-p-500.png 500w, images/7-p-800.png 800w, images/7.png 1080w"></div>
             </div>
           </div>
           <div data-w-id="cea39288-a86d-bc98-0716-192fe18bb831" class="timeline_item">
             <div id="w-node-cea39288-a86d-bc98-0716-192fe18bb832-b9adda82" class="timeline_left">
-              <div class="timeline_date-text">October 2023</div>
+              <div class="timeline_date-text">April 2024</div>
             </div>
             <div id="w-node-cea39288-a86d-bc98-0716-192fe18bb835-b9adda82" class="timeline_centre">
               <div class="timeline_circle"></div>
@@ -276,7 +276,7 @@ fbq('track', 'PageView');
               <h2 class="heading-4">Next Milestone</h2>
             </div>
             <div class="margin-bottom-medium">
-              <h4 class="heading">Having achieved the Certified Kubernetes Administrator (CKA) certification, I am now focused on further deepening my knowledge of Kubernetes, and DevSecOps practices.</h4>
+              <h4 class="heading">Having achieved the Certified Kubernetes Administrator and Application Developer (CKA) & (CKAD) certifications, I am now focused on further deepening my knowledge of Kubernetes, and DevSecOps practices.</h4>
             </div>
             <div class="margin-bottom-large">
               <p class="paragraph-large">View my resume in PDF format and on Notion app below</p>
