--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ fbq('track', 'PageView');
           </div>
           <div data-w-id="ca21cc2f-00d7-84a3-f446-587e32a59c00" class="timeline_item">
             <div id="w-node-ca21cc2f-00d7-84a3-f446-587e32a59c01-b9adda82" class="timeline_left">
-              <div class="timeline_date-text">January 2022</div>
+              <div class="timeline_date-text">January 2023</div>
             </div>
             <div id="w-node-ca21cc2f-00d7-84a3-f446-587e32a59c04-b9adda82" class="timeline_centre">
               <div class="timeline_circle"></div>
@@ -159,7 +159,7 @@ fbq('track', 'PageView');
                 <div class="timeline_text">Graduated and fully committed to cloud computing, securing an internship in Woopcase, and earning my first AWS certification.<br></div>
               </div>
               <div class="margin-bottom-medium">
-                <p class="text-colour-lightgrey">I got an internship in Viseo thanks to my  friend (Thank you Simo 😃) where I got to learn a lot and see the practical world.<br><br>I went on developing my knowledge and validated my first AWS certification which gave me the confidence and boost me up to want more and learn more.<br></p>
+                <p class="text-colour-lightgrey">I got an internship in Woopcase thanks to my  friend (Thank you Simo 😃) where I got to learn a lot and see the practical world.<br><br>I went on developing my knowledge and validated my first AWS certification which gave me the confidence and boost me up to want more and learn more.<br></p>
               </div>
               <div class="margin-bottom-xlarge">
                 <div class="inline-block">
