Updated Medium and LinkedIn buttons

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Thu May 23 2024 18:44:10 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Fri May 24 2024 11:15:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65855a2d65005248b9adda82" data-wf-site="65855a2d65005248b9adda27" lang="en">
 <head>
   <meta charset="utf-8">
@@ -58,7 +58,7 @@ fbq('track', 'PageView');
             <div class="margin-bottom-medium">
               <h4 class="heading-3">A Passionate DevOps Engineer</h4>
             </div>
-            <p class="paragraph-large">I started my journey in Chemical and Nano Engineering, but in 2022, I found my true calling in DevOps &amp; Cloud Computing.<br>Firm believer in the +1 daily progress mantra.<br>(For the best experience, please use a Desktop).<br></p>
+            <p class="paragraph-large">I started my journey in Chemical and Nano Engineering, but in 2022, I found my true calling in DevOps &amp; Cloud Computing.<br>Firm believer in the +1 daily progress mantra.<br>‍<br>(For the best experience, please use a Desktop).<br></p>
             <div class="div-block-2">
               <a href="#Journey" class="link-block w-inline-block"><img src="images/scroll-up-1381-svgrepo-com.svg" loading="lazy" width="37" alt="" class="image-2"></a>
             </div>
@@ -248,14 +248,14 @@ fbq('track', 'PageView');
               <div class="timeline_date-text">Today</div>
             </div>
             <div class="margin-bottom-small">
-              <div class="timeline_text">In pursuing new opportunities, I am deeply committed to DevSecOps practices, constantly enhancing my knowledge to apply robust security measures throughout the SDLC.<br><br>PS. This Website is 100% AWS-hosted <br>(Check my Github for more details about this project)<br></div>
+              <div class="timeline_text">In pursuing new opportunities, I am deeply committed to DevSecOps practices, constantly enhancing my knowledge to apply robust security measures throughout the SDLC.<br><br>I also write articles DevOps related on Medium.<br><br>PS. This Website is 100% AWS-hosted <br>(Check my Github for more details about this project)<br></div>
             </div>
             <div class="margin-bottom-large">
-              <p class="paragraph-large">Take a look at my LinkedIn and GitHub profiles below 👇</p>
+              <p class="paragraph-large">Take a look at my Medium and GitHub profiles below 👇</p>
             </div>
             <div class="button-wrapper">
-              <a href="https://www.linkedin.com/in/tamer-ben-benhassan/" target="_blank" class="button-icon-small margin-right-small linkedln-down-today w-inline-block"><img src="images/linkedin-svgrepo-com-1.svg" loading="lazy" alt="" class="button-icon">
-                <div class="text-block-4">Linkedin</div>
+              <a href="https://medium.com/@tamerbenhassan" target="_blank" class="button-icon-small margin-right-small linkedln-down-today w-inline-block"><img src="images/medium_logo_icon_189223.png" loading="lazy" alt="" class="button-icon medium">
+                <div class="text-block-4">Medium</div>
               </a>
               <a href="https://github.com/tamerbenhassan" target="_blank" class="button-icon-small-secondary w-inline-block"><img src="images/github-142-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
                 <div class="text-block-3">Github</div>
@@ -280,14 +280,14 @@ fbq('track', 'PageView');
               <h4 class="heading">Having achieved the CKA and CKAD Kubernetes certifications, I am aiming to validate my 3rd Kubernetes certification, the CKS.</h4>
             </div>
             <div class="margin-bottom-large">
-              <p class="paragraph-large">View my resume in PDF format and on Notion app below</p>
+              <p class="paragraph-large">View my CV and LinkedIn profile below<br></p>
             </div>
             <div class="button-wrapper">
               <a href="https://resume-tamer-benhassan.s3.amazonaws.com/Resume_Tamer_Ben.pdf" target="_blank" class="button-icon-small margin-right-small w-inline-block"><img src="images/pdf-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
-                <div class="text-block-4">CV (PDF)</div>
+                <div class="text-block-4">CV</div>
               </a>
-              <a href="https://ionized-sofa-401.notion.site/Tamer-s-Resume-439470ebe11c438fb541cb299eb33021?pvs=4" target="_blank" class="button-icon-small-secondary w-inline-block"><img src="images/notion-logo-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
-                <div class="text-block-3">CV (NOTION)</div>
+              <a href="https://www.linkedin.com/in/tamer-ben-benhassan/" target="_blank" class="button-icon-small-secondary w-inline-block"><img src="images/linkedin-svgrepo-com-1.svg" loading="lazy" alt="" class="button-icon">
+                <div class="text-block-3">Linkedin</div>
               </a>
             </div>
             <div class="button-wrapper">
